--- a/index.html
+++ b/index.html
@@ -8,11 +8,21 @@
     <title>MyCrypting - Crypto Accounting</title>
     <link id="favicon" rel="icon" type="image/x-icon" href="img/favicon-white.ico" />
 
-    <!-- <link href="../../css/styles.css" rel="stylesheet" type="text/css" /> -->
-
+    <!-- CSS -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48681317-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-48681317-1');
+    </script>
+
 </head>
 
 <body>
